Fix course data alignment

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,10 +17,15 @@
     width: 380px;
     background-size: cover;
     margin: .5rem;
+    overflow: hidden;
   }
   
   .coursecard__contents {
     margin: 0 0.6rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
   .coursecard__title {
@@ -34,7 +39,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-top: 6rem;
   }
   
   .coursecard__tag {
@@ -48,7 +52,7 @@
   .coursecard__footer {
     display: flex;
     justify-content: space-between;
-    margin-top: 1rem;
+    align-items: center;
     color: var(--primary-color);
     font-weight: 600;
   }
